--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-public/ 
-node_modules/ 
-.deploy_git/ 
-.git/ 
-db.json 
-*.log 
+.DS_Store
+Thumbs.db
+db.json
+*.log
+node_modules/
+public/
+.deploy*/
+_multiconfig.yml
