--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,14 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: StanBlog
-subtitle: ''
-description: 'A popular long-form, stick-figure-illustrated blog about almost everything. Material Themes / GitHub Pages 个性化定制的Hexo-Matery主题
-'
+title: 小满的博客
+subtitle: '生活分享'
+description: '一个会不断充实的宝藏库'
 keywords:
-author: Stan ke
-language: en
+author: Xiao man
+language: zh-CN
 timezone: ''
-url: https://stan370.github.io/
+url:  https://xiaomanblog.com
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -107,7 +106,4 @@ theme: hexo-theme-matery
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  - type: git
-    repo: https://github.com/Stan370/stan370.github.io.git
-    branch: master
-
+  - type:  ' '  
