--- a/serv00_config.yml
+++ b/serv00_config.yml
@@ -3,15 +3,14 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: StanBlog
-subtitle: ''
-description: 'A popular long-form, stick-figure-illustrated blog about almost everything. Material Themes / GitHub Pages 个性化定制的Hexo-Matery主题
-'
+title: 小满的博客  
+subtitle: '分享生活'
+description: '一个会不断充实的宝藏库'
 keywords:
-author: Stan ke
+author: Xiao man
 language: en
 timezone: ''
-url: https://jksfadfm.serv00.net
+url: https://xiaomanblog.com 
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
