--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -30,9 +30,9 @@ menu:
 # 站点运行开始时间.
 time:
   enable: true
-  year: 2019 # 年份
-  month: 06 # 月份
-  date: 28 # 日期
+  year: 2025 # 年份
+  month: 12 # 月份
+  date: 01   # 日期
   hour: 00 # 小时
   minute: 00 # 分钟
   second: 00 # 秒
@@ -44,7 +44,7 @@ music:
 cover:
   showPrevNext: true # 是否显示左右切换按钮. Whether to display the left and right toggle buttons.
   showIndicators: true # 是否显示指示器. # Whether to display the indicators
-  autoLoop: true # 是否自动轮播. Whether it is automatically rotated.
+  autoLoop: false # 是否自动轮播. Whether it is automatically rotated.
   duration: 120 # 切换延迟时间. Switching delay time.
   intervalTime: 5000 # 自动切换下一张的间隔时间. Automatically switch the interval of the next one.
   useConfig: false # 是否使用配置文件, 在 _data/covers.json 下配置推荐文章, false则使用主题在文章中的配置 cover coverImg
@@ -109,11 +109,7 @@ indexbtn:
 # icon/button will not show up if you leave the corresponding socialLink empty
 # 首页 banner 中的第二行个人信息配置，留空即不启用
 socialLink:
-  github:  https://github.com/Stan370
-  facebook: # https://www.facebook.com/xxx
-  twitter: Sorry, it got blocked by Musk
-  weibo: # https://weibo.com/xxx
-  zhihu: https://www.zhihu.com/people/chat.openai
+  github:  https://github.com/jiyiweigu 
   rss: true # true、false
 
 
@@ -212,8 +208,8 @@ snowdown:
 # 在"关于"页面中配置个人信息，包括头像、职业和个人介绍.
 profile:
   avatar: /medias/avatar.jpg
-  career: Software Engineer
-  introduction: If you wish to succeed, you should use persistence as your good friend, experience as your reference, prudence as your brother and hope as your sentry.
+  career: student
+  introduction: 
 
 
 
@@ -384,7 +380,7 @@ changyan:
 # 配置是否在 header 中显示 fork me on github 的图标，默认为true，你可以修改为你的仓库地址.
 githubLink:
   enable: true
-  url: https://github.com/Stan370/stan370.github.io
+  url: https://github.com/jiyiweigu/xiaoman-blog-source
   title: Fork Me
 
 
@@ -630,7 +626,8 @@ icp:
 # 更多关于访问速度优化，请查看：https://blog.sky03.cn/posts/42790.html
 # 注：jsdelivr可以自动帮你生成.min版的js和css，所以你在上面设置js及css路径中可以直接写.min.xxx
 jsDelivr:
-  url: https://cdn.jsdelivr.net/gh/Stan370/stan370.github.io
+  url:jsDelivr:
+  url: https://cdn.jsdelivr.net/gh/jiyiweigu/xiaoman-blog-source  # 改成你的源代码仓库！
   
 # 网站背景图
 background:
