--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ keywords:
 author: Xiao man
 language: zh-CN
 timezone: ''
-url: https://jiyiweigu.github.io
+url: https://xiaomanblog.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
