--- a/_config.yml
+++ b/_config.yml
@@ -107,4 +107,6 @@ theme: hexo-theme-matery
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  - type:  ' '  
+  - type:  git 
+  - repo: https://github.com/jiyiweigu/jiyiweigu.github.io
+  - branch: master
